# flyvisor

./: .gitattributes  .gitignore  .gitmodules  README.md
apps/crypto_comm/: CMakeLists.txt  crypto_comm.camkes  options.cmake  settings.cmake
apps/crypto_comm/client/: main.c  private_key.pem
apps/crypto_comm/components/decrypt/: Decrypt.camkes  decrypt.c
apps/crypto_comm/components/encrypt/: Encrypt.camkes  encrypt.c
apps/crypto_comm/components/hwrng/: HWrng.camkes  hwrng.c  hwrng.camkes
apps/crypto_comm/components/rx/: Rx.camkes  rx.c  rx.camkes
apps/crypto_comm/components/server/: server.c  server.camkes
apps/crypto_comm/driver/: rpi4-dma.c  rpi4-dma.h
apps/crypto_comm/include/crypto/: chiper_package.h  global.h  ring_buffer.h
apps/crypto_comm/interfaces/: hwrng_inf.camkes
apps/crypto_comm/public_keys/: 9ccf9c5d
apps/sel4test/: CMakeLists.txt
apps/test/: CMakeLists.txt  dma.c  dma.h  global.h  options.cmake  test.c  test.camkes
apps/vm_cross/: CMakeLists.txt  options.cmake  vm_cross.camkes
apps/vm_cross/conf/rpi4/: vm_conf.camkes
apps/vm_cross/modules/: cross_vm_connections.c
apps/vm_linux/: CMakeLists.txt  options.cmake  settings.cmake  vm_linux.camkes
apps/vm_linux/conf/rpi4/: vm_conf.camkes
apps/vm_linux/vm_conf/rpi4/: vm_conf.camkes
docker/: Makefile
docker/dockerfiles/: extras.Dockerfile  user.Dockerfile
docker/utils/: user.sh
notes/: cross.md  errors.md  notes.md  uart.md
patches/kernel/: kernel_add_rpi4_vm_mem.patch
patches/libs/GmSSL/: libgmssl_sel4.patch
patches/projects/camkes-vm/: vm_add_rpi4.patch
patches/projects/seL4_projects_libs/: vm_add_rpi4.patch
patches/seL4/projects/camkes-vm/: vm_add_rpi4.patch
patches/tools/seL4/: seL4_tools_add_spin_table_smp.patch
resources/rpi4/: u-boot_9e53e45292
resources/rpi4/linux/: Image  vm_linux.dts
scripts/: build.sh  docker.sh  patch.sh  setup.sh  submodules.sh
utils/: mav_crypt_proxy.py  test.py
